--- a/sendToken.html
+++ b/sendToken.html
@@ -3,25 +3,24 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Send Token</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 	<div id="App">
 		<h1> Send Token</h1>
 		<form action='http://localhost:8080/send', method="post">
-				<label for="name"> Name: </label>
-				<input type="text" name="name" />
 
-				<label for="fromAddress">From Address:</label>
+				<label for="fromAddress" class="col-lg-2 control-label">From Address:</label>
 				<input type="text" name="fromAddress" placeholder="Enter your Account Address"/>
 
-				<label for="fromPrivateKey">Your Private Key</label>
-				<input type="text" name="fromPrivateKey" placeholder="Enter your private key"/>
+				<label for="fromPrivateKey" class="col-lg-2 control-label">Your Private Key</label>
+				<input type="password" name="fromPrivateKey" placeholder="Enter your private key"/>
 
-				<label for="toAddress">To Address:</label>
+				<label for="toAddress" class="col-lg-2 control-label">To Address:</label>
 				<input type="text" name="toAddress" placeholder="Enter your receipient" /> 
 
-				<label for="amount">Transfer Amount:</label>
+				<label for="amount" class="col-lg-2 control-label">Transfer Amount:</label>
 				<input type="text" name="amount" placeholder="Enter amount" />
 
 				<input type="submit" value="Send Token" />
